--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Gus Coffey
 description: Astronomer | Data Analyst | Outdoor Enthusiast
-theme: jekyll-theme-minimal
+theme: jekyll-theme-cayman
