--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 title: Gus Coffey
+logo: docs/assets/circle_headshot.jpg
 description: Astronomer | Data Analyst | Outdoor Enthusiast
 theme: jekyll-theme-cayman
