--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Gus Coffey
-logo: docs/assets/circle_headshot.jpg
+logo: docs/assets/circle_headshot.png
 description: Astronomer | Data Analyst | Outdoor Enthusiast
 theme: jekyll-theme-cayman
